All pages linked together, still static

--- a/front_end/html/page.html
+++ b/front_end/html/page.html
@@ -69,29 +69,29 @@
           <table class="table table-default">
             <thead>
               <tr>
-                <th>Votes</th>
+                <th class="col-sm-1 col-lg-1">Votes</th>
                 <th>Thread</th>
                 <th class="text-right">Poster</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td><% getThreadVotes() %></td>
+                <td class="col-sm-1 col-lg-1"><% getThreadVotes() %></td>
                 <td><a href="thread.html">What stuff do you have in your closet?</a></td>
                 <td class="text-right"><a href="user.html">Brett</td></a>
               </tr>
               <tr>
-                <td><% getThreadVotes() %></td>
+                <td class="col-sm-1 col-lg-1"><% getThreadVotes() %></td>
                 <td><a href="thread.html">Backhoes and fronthoes: the great debate</t></a>
                 <td class="text-right"><a href="user.html">Josh</td></a>
               </tr>
               <tr>
-                <td><% getThreadVotes() %></td>
+                <td class="col-sm-1 col-lg-1"><% getThreadVotes() %></td>
                 <td><a href="thread.html">Belligerence in the courtroom is a felony</a></td>
                 <td class="text-right"><a href="user.html">Sam</td></a>
               </tr>
               <tr>
-                <td><% getThreadVotes() %></td>
+                <td class="col-sm-1 col-lg-1"><% getThreadVotes() %></td>
                 <td><a href="thread.html">2001: The Based God oddesy</a></td>
                 <td class="text-right"><a href="user.html">Eric</td></a>
               </tr>
