--- a/front_end/html/thread.html
+++ b/front_end/html/thread.html
@@ -69,29 +69,29 @@
           <table class="table table-default">
             <thead>
               <tr>
-                <th>Votes</th>
+                <th class="col-sm-1 col-lg-1">Votes</th>
                 <th>Comment</th>
                 <th class="text-right">Poster</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td><% getCommentVotes() %></td>
+                <td class="col-sm-1 col-lg-1"><% getCommentVotes() %></td>
                 <td>Who</td>
                 <td class="text-right"><a href="user.html">Brett</td></a>
               </tr>
               <tr>
-                <td><% getCommentVotes() %></td>
+                <td class="col-sm-1 col-lg-1"><% getCommentVotes() %></td>
                 <td>What</t>
                 <td class="text-right"><a href="user.html">Josh</td></a>
               </tr>
               <tr>
-                <td><% getCommentVotes() %></td>
+                <td class="col-sm-1 col-lg-1"><% getCommentVotes() %></td>
                 <td>Where</td>
                 <td class="text-right"><a href="user.html">Sam</td></a>
               </tr>
               <tr>
-                <td><% getCommentVotes() %></td>
+                <td class="col-sm-1 col-lg-1"><% getCommentVotes() %></td>
                 <td>Brown cow</td>
                 <td class="text-right"><a href="user.html">Eric</td></a>
               </tr>
