--- a/front_end/html/index.html
+++ b/front_end/html/index.html
@@ -27,16 +27,17 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">DiabloDB <span class="glyphicon glyphicon-fire" aria-hidden="true"></a>
+          <a class="navbar-brand" href="index.html">DiabloDB <span class="glyphicon glyphicon-fire" aria-hidden="true"></span></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="pages_list.html">Your Pages</a></li>
             <li><a href="threads_list.html">Your Threads</a></li>
             <li><a href="comments_list.html">Your Comments</a></li>
+          </ul>
+                      <ul class="nav navbar-nav navbar-right">
             <li><a href="user.html">Profile</a></li>
             <li><a id="login" href="sign_in.html">Log in</a></li>
-            <li><a id="logout" href="sign_in.html">Log out</a></li>
             <!-- <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu">
@@ -49,6 +50,7 @@
                 <li><a href="#">One more separated link</a></li>
               </ul>
             </li> -->
+          </ul>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -63,6 +65,7 @@
 
       <div class="sidebar">
         <a href="create_page.html"><button class="btn btn-primary">Create Page</button></a>
+                <a href="sign_up.html"><button class="btn btn-primary">Create Account</button></a>
       </div>
 
       <div class="row">
