--- a/front_end/html/sign_in.html
+++ b/front_end/html/sign_in.html
@@ -23,21 +23,23 @@
   </div>
   <div class="container">
     <!-- You didn't sign in correctly! D'oh -->
-    <div class="alert alert-danger text-center" role="alert" style="visibility:hidden;"> 
+    <div class="alert alert-danger text-center" role="alert" style="visibility:hidden;">
       Incorrect username or password. <strong>Try again.</strong>
     </div>
     <form class="form-signin">
       <h2 class="form-signin-heading">Please sign in</h2>
-      <label for="inputEmail" class="sr-only">Email address</label>
-      <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+      <label for="inputEmail" class="sr-only">Username</label>
+      <input type="email" id="inputUName" class="form-control" placeholder="Username" required autofocus>
       <label for="inputPassword" class="sr-only">Password</label>
       <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-      <div class="checkbox">
-        <label>
-          <input type="checkbox" value="remember-me">
-          Remember me
-        </label>
-      </div>
+        <div class="checkbox">
+          <label>
+            <input type="checkbox" value="remember-me">
+            Remember me
+          </label>
+        </div>
+        <div class="signup text-right">
+        </div>
       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
     </form>
 
