--- a/front_end/html/threads_list.html
+++ b/front_end/html/threads_list.html
@@ -22,12 +22,12 @@
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </button>
+          </button> -->
           <a class="navbar-brand" href="index.html">DiabloDB <span class="glyphicon glyphicon-fire" aria-hidden="true"></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
@@ -73,23 +73,23 @@
             <tbody>
               <tr>
                 <td class="col-sm-1 col-lg-1"><span class="label label-success">Rising</span></td>
-                <td><a href="index.html">What stuff do you have in your closet?</a></td>
-                <td class="text-right" style="padding-right:30px;"><% getThreads()% >x</td>
+                <td><a href="thread.html">What stuff do you have in your closet?</a></td>
+                <td class="text-right" style="padding-right:38px;"><% getThreads()% >x</td>
               </tr>
               <tr>
                 <td class="col-sm-1 col-lg-1"><span class="label label-default">Neutral</span></td>
-                <td><a href="index.html">Backhoes and fronthoes: the great debate</a></td>
-                <td class="text-right" style="padding-right:30px;"><% getThreads()% >x</td>
+                <td><a href="thread.html">Backhoes and fronthoes: the great debate</a></td>
+                <td class="text-right" style="padding-right:38px;"><% getThreads()% >x</td>
               </tr>
               <tr>
                 <td class="col-sm-1 col-lg-1"><span class="label label-success">Rising</span></td>
-                <td><a href="index.html">Belligerence in the courtroom is a felony</a></td>
-                <td class="text-right" style="padding-right:30px;"><% getThreads()% >x</td>
+                <td><a href="thread.html">Belligerence in the courtroom is a felony</a></td>
+                <td class="text-right" style="padding-right:38px;"><% getThreads()% >x</td>
               </tr>
               <tr>
                 <td class="col-sm-1 col-lg-1"><span class="label label-danger">Falling</span></td>
-                <td><a href="index.html">2001: The Based God oddesy</a></td>
-                <td class="text-right" style="padding-right:30px;"><% getThreads()% >x</td>
+                <td><a href="thread.html">2001: The Based God oddesy</a></td>
+                <td class="text-right" style="padding-right:38px;"><% getThreads()% >x</td>
               </tr>
 
             </tbody>
@@ -98,6 +98,27 @@
       </div>
 
     </div> <!-- /container -->
+    <div class="container">
+        <nav>
+      <ul class="pagination">
+        <li>
+          <a href="#" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+          </a>
+        </li>
+        <li><a href="#">1</a></li>
+        <li><a href="#">2</a></li>
+        <li><a href="#">3</a></li>
+        <li><a href="#">4</a></li>
+        <li><a href="#">5</a></li>
+        <li>
+          <a href="#" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+    </div>
 
 
     <!-- Bootstrap core JavaScript
