--- a/front_end/html/create_page.html
+++ b/front_end/html/create_page.html
@@ -35,8 +35,11 @@
             <li><a href="pages_list.html">Your Pages</a></li>
             <li><a href="threads_list.html">Your Threads</a></li>
             <li><a href="comments_list.html">Your Comments</a></li>
+          </ul>
+                      <ul class="nav navbar-nav navbar-right">
+                        <li><a href="user.html">Profile</a></li>
             <li><a id="login" href="sign_in.html">Log in</a></li>
-            <li><a id="logout" href="sign_in.html">Log out</a></li>
+            <!-- <li><a id="logout" href="sign_in.html">Log out</a></li> -->
             <!-- <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu">
@@ -49,6 +52,7 @@
                 <li><a href="#">One more separated link</a></li>
               </ul>
             </li> -->
+          </ul>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
