--- a/front_end/html/sign_up.html
+++ b/front_end/html/sign_up.html
@@ -12,7 +12,7 @@
     <title>DiabloDB: the forum for nothing</title>
 
     <!-- Custom styles for this template -->
-    <link href="../css/index.css" rel="stylesheet">
+    <link href="../css/sign_up.css" rel="stylesheet">
 
   </head>
 
