--- a/front_end/html/thread.html
+++ b/front_end/html/thread.html
@@ -11,7 +11,7 @@
     <title>DiabloDB: the forum for something</title>
 
     <!-- Custom styles for this template -->
-    <link href="../css/index.css" rel="stylesheet">
+    <link href="../css/thread.css" rel="stylesheet">
 
   </head>
 
