Debug maven build

--- a/front_end/html/comments_list.html
+++ b/front_end/html/comments_list.html
@@ -77,19 +77,19 @@
             <tbody>
               <tr>
                 <td class="col-sm-1 col-lg-1"><span class="label label-success">Rising</span></td>
-                <td><a href="index.html">What stuff do you have in your closet?</a></td>
+                <td><a href="thread.html">What stuff do you have in your closet?</a></td>
               </tr>
               <tr>
                 <td class="col-sm-1 col-lg-1"><span class="label label-default">Neutral</span></td>
-                <td><a href="">Backhoes and fronthoes: the great debate</a></td>
+                <td><a href="thread.html">Backhoes and fronthoes: the great debate</a></td>
               </tr>
               <tr>
                 <td class="col-sm-1 col-lg-1"><span class="label label-success">Rising</span></td>
-                <td><a href="">Belligerence in the courtroom is a felony</a></td>
+                <td><a href="thread.html">Belligerence in the courtroom is a felony</a></td>
               </tr>
               <tr>
                 <td class="col-sm-1 col-lg-1"><span class="label label-danger">Falling</span></td>
-                <td><a href="">2001: The Based God oddesy</a></td>
+                <td><a href="thread.html">2001: The Based God oddesy</a></td>
               </tr>
 
             </tbody>
